# curatarr

./: Cargo.toml  LICENSE  curatarr.example.toml
crates/curatarr-api/: Cargo.toml
crates/curatarr-api/src/: lib.rs  router.rs  state.rs
crates/curatarr-api/src/routes/: health.rs
crates/curatarr-api/tests/: health_tests.rs
crates/curatarr-bin/: Cargo.toml
crates/curatarr-bin/src/: cli.rs  main.rs
crates/curatarr-config/: Cargo.toml
crates/curatarr-config/src/: database.rs  lib.rs  library.rs  logging.rs  server.rs
crates/curatarr-core/: Cargo.toml
crates/curatarr-core/src/: error.rs
crates/curatarr-core/src/traits/: download_client.rs  indexer.rs  metadata_provider.rs  mod.rs  notifier.rs  repository.rs
crates/curatarr-core/src/types/: author.rs  collection.rs  edition.rs  enums.rs  file.rs  id.rs  identifiers.rs  mod.rs  publisher.rs  series.rs  tag.rs  work.rs
crates/curatarr-db/: Cargo.toml
crates/curatarr-db/src/: lib.rs  sqlite.rs
crates/curatarr-db/tests/: repository_tests.rs
crates/curatarr-scanner/: Cargo.toml
crates/curatarr-scanner/src/: cover.rs  format.rs  hash.rs  lib.rs
crates/curatarr-scanner/src/extractors/: comic.rs  epub.rs  mod.rs  pdf.rs
migrations/postgres/: 001_initial.sql
migrations/sqlite/: 001_initial.sql
