[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"

# Core types
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Configuration
config = "0.15"

# Image processing
image = "0.25"

# Hashing
sha2 = "0.10"

# Testing
proptest = "1"
rstest = "0.25"
tempfile = "3"

# Internal crates
curatarr-core = { path = "crates/curatarr-core" }
curatarr-config = { path = "crates/curatarr-config" }
curatarr-db = { path = "crates/curatarr-db" }
curatarr-scanner = { path = "crates/curatarr-scanner" }
curatarr-api = { path = "crates/curatarr-api" }
