[package]
name = "curatarr-config"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
curatarr-core = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
