[package]
name = "curatarr-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
