[package]
name = "curatarr-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
curatarr-core = { workspace = true }
sha2 = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
