[package]
name = "curatarr-scanner"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
curatarr-core = { workspace = true }
sha2 = { workspace = true }
image = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
lopdf = "0.34"
walkdir = "2"
globset = "0.4"

[dev-dependencies]
proptest = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
